Fix: Top content alignment on Author pages
Fix responsive styles and alignments in Sidebar and main content area

--- a/_sass/partials/_archive.scss
+++ b/_sass/partials/_archive.scss
@@ -1,3 +1,7 @@
+.body-archive .sidebar {
+  padding: 10px 0 20px;
+}
+
 img.archive-comment {
   float: right;
   margin: 0 0.05em 0.05em 0;
