--- a/_sass/partials/_blog.scss
+++ b/_sass/partials/_blog.scss
@@ -2,6 +2,8 @@
  * _blog.scss
  */
 
+.body-archive .blog-main-container,
+.body-post .blog-main-container,
 .blog-main-container {
   // margin: 0 -15px;
   // width: 920px;
