--- a/_sass/partials/_sidebar.scss
+++ b/_sass/partials/_sidebar.scss
@@ -3,6 +3,10 @@
   padding: 0 0 20px;
   width: 300px;
 
+  display: flex;
+  justify-content: center;
+  width: auto;
+
   li {
     font-size: 14px;
     line-height: 22px;
